--- a/src/pages/integrations/adobe-commerce/features/index.css
+++ b/src/pages/integrations/adobe-commerce/features/index.css
@@ -3,6 +3,10 @@ div.main {
   justify-content: left;
   display: flex;
   flex-direction: column;
+  margin: 0 10px 0 10px;
+  width: auto;
+  min-width: 320px;
+  max-width: 800px;
 }
 
 tooltip {
@@ -82,6 +86,7 @@ tbody tr.category-feature:last-child td {
   font-weight: bold;
   color: black;
   background-color: #f1f1f1;
+  text-align: left;
 }
 
 .category-name th:nth-child(1) {
